# CSNetworkEmulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  entry.cxx
src/devices/: bridge.cxx  bridge.h  station_receiver.cxx  station_receiver.h  station_sender.cxx  station_sender.h
src/managers/: app_manager.cxx  app_manager.h  display_manager.cxx  display_manager.h  gui_manager.cxx  gui_manager.h
src/models/: frame.cxx  frame.h
src/models/ui/: logs_model.cxx  logs_model.h
src/resources/: main.qrc
src/resources/components/: FrameObject.qml  LogsItem.qml
src/resources/views/: ControlBar.qml  LogWindow.qml  MainWindow.qml  Player.qml  TitleBar.qml
